overflow de imagen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="dist/output.css">
 </head>
 <body class="text-lg flex flex-col justify-center min-h-[100vh] overflow-x-hidden">
-  <header class="">
+  <header>
     <nav class="contenedor flex items-center justify-between relative">
       <img src="src/images/logo.svg" alt="logo">
 
@@ -26,7 +26,7 @@
     </nav>
   </header>
 
-  <main class="mt-16 md:mt-28 z-50">
+  <main class="mt-16 md:mt-28 z-50 overflow-x-hidden">
     <div class="contenedor flex flex-col-reverse md:flex-row gap-16 md:gap-0 md:items-center lg:gap-24">
       <div class="md:basis-1/2">
         <p class="font-barlow-condensed uppercase text-GrayishBlue tracking-[4px] flex items-center">
